--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -1,63 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sidebar</title>
-    <link href="./styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="sidebar d-flex flex-column flex-shrink-0 p-3" id="sidebar">
-      <div class="d-flex align-items-center">
-        <img
-          class="logo"
-          src="../../img/SpendSense.png"
-          width="50"
-          height="50"
-        />
-        <p class="fs-4 title">SpendSense</p>
-      </div>
+<body>
+  <div class="sidebar d-flex flex-column flex-shrink-0 p-3" id="sidebar">
+    <div class="d-flex align-items-center">
+      <img class="logo" src="../../img/SpendSense.png" width="50" height="50" />
+      <p class="fs-4 title">SpendSense</p>
+    </div>
 
-      <hr />
-      <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-item">
-          <a
-            href="../Dashboard/index.html"
-            id="dashboard"
-            class="nav-link link-light"
-            aria-current="page"
-          >
-            <span class="icon">
-              <i class="bi bi-house-door"></i>
-            </span>
-            <span class="description">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a
-            href="../Budget/index.html"
-            id="budget"
-            class="nav-link link-light"
-          >
-            <span class="icon">
-              <i class="bi bi-bar-chart"></i>
-            </span>
-            <span class="description">Budget</span>
-          </a>
-        </li>
-        <li>
-          <a
-            href="../Transactions/index.html"
-            id="transactions"
-            class="nav-link link-light"
-          >
-            <span class="icon">
-              <i class="bi bi-arrow-left-right"></i>
-            </span>
-            <span class="description">Transactions</span>
-          </a>
-        </li>
-        <!-- <li>
+    <hr />
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li class="nav-item">
+        <a
+          href="../Dashboard/index.html"
+          id="dashboard"
+          class="nav-link link-light"
+          aria-current="page"
+        >
+          <span class="icon">
+            <i class="bi bi-house-door"></i>
+          </span>
+          <span class="description">Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a href="../Budget/index.html" id="budget" class="nav-link link-light">
+          <span class="icon">
+            <i class="bi bi-bar-chart"></i>
+          </span>
+          <span class="description">Budget</span>
+        </a>
+      </li>
+      <li>
+        <a
+          href="../Transactions/index.html"
+          id="transactions"
+          class="nav-link link-light"
+        >
+          <span class="icon">
+            <i class="bi bi-arrow-left-right"></i>
+          </span>
+          <span class="description">Transactions</span>
+        </a>
+      </li>
+      <!-- <li>
           <a href="#" class="nav-link link-light">
             <span class="icon">
               <i class="bi bi-Learn"></i>
@@ -65,29 +48,28 @@
             <span class="description">Learn</span>
           </a>
         </li> -->
+    </ul>
+    <hr />
+    <div class="dropdown">
+      <a
+        href="#"
+        class="d-flex align-items-center text-white text-decoration-none"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+      >
+        <span class="icon">
+          <i class="bi bi-gear"></i>
+        </span>
+        <strong class="settings text-white">User</strong>
+      </a>
+      <ul class="dropdown-menu text-small shadow">
+        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li>
+          <hr class="dropdown-divider" />
+        </li>
+        <li><a class="dropdown-item" href="#">Sign out</a></li>
       </ul>
-      <hr />
-      <div class="dropdown">
-        <a
-          href="#"
-          class="d-flex align-items-center text-white text-decoration-none"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <span class="icon">
-            <i class="bi bi-gear"></i>
-          </span>
-          <strong class="settings text-white">User</strong>
-        </a>
-        <ul class="dropdown-menu text-small shadow">
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li>
-            <hr class="dropdown-divider" />
-          </li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
-        </ul>
-      </div>
     </div>
-  </body>
-</html>
+  </div>
+</body>
