--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -29,6 +29,7 @@
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body>
     <!-- Sidebar -->
@@ -43,13 +44,13 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Income</h5>
-              <form id="income-form">
+              <form id="incomeForm">
                 <div class="mb-3">
                   <label class="form-label">Source</label>
                   <input
                     type="text"
                     class="form-control"
-                    id="income-source"
+                    id="incomeSource"
                     required
                   />
                 </div>
@@ -58,11 +59,11 @@
                   <input
                     type="number"
                     class="form-control"
-                    id="income-amount"
+                    id="incomeAmount"
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100">
+                <button type="submit" class="btn text-white w-100" id="incomeBtn">
                   Add Income
                 </button>
               </form>
@@ -75,13 +76,13 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Expenses</h5>
-              <form id="expenses-form">
+              <form id="expensesForm">
                 <div class="mb-3">
                   <label class="form-label">Category</label>
                   <input
                     type="text"
                     class="form-control"
-                    id="expense-category"
+                    id="expenseCategory"
                     required
                   />
                 </div>
@@ -90,44 +91,12 @@
                   <input
                     type="number"
                     class="form-control"
-                    id="expense-amount"
+                    id="expenseAmount"
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100">
+                <button type="submit" class="btn text-white w-100" id="expenseBtn">
                   Add Expense
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-
-        <!-- Assets -->
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Assets</h5>
-              <form id="assets-form">
-                <div class="mb-3">
-                  <label class="form-label">Asset Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="asset-name"
-                    required
-                  />
-                </div>
-                <div class="mb-3">
-                  <label class="form-label">Value</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="asset-value"
-                    required
-                  />
-                </div>
-                <button type="submit" class="btn text-white w-100">
-                  Add Asset
                 </button>
               </form>
             </div>
@@ -139,13 +108,13 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Debts</h5>
-              <form id="debts-form">
+              <form id="debtsForm">
                 <div class="mb-3">
                   <label class="form-label">Debt Type</label>
                   <input
                     type="text"
                     class="form-control"
-                    id="debt-type"
+                    id="debtType"
                     required
                   />
                 </div>
@@ -154,11 +123,11 @@
                   <input
                     type="number"
                     class="form-control"
-                    id="debt-amount"
+                    id="debtAmount"
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100">
+                <button type="submit" class="btn text-white w-100" id="debtBtn">
                   Add Debt
                 </button>
               </form>
@@ -171,13 +140,13 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Payments Due</h5>
-              <form id="payments-form">
+              <form id="paymentsForm">
                 <div class="mb-3">
                   <label class="form-label">Payment Type</label>
                   <input
                     type="text"
                     class="form-control"
-                    id="payment-type"
+                    id="paymentType"
                     required
                   />
                 </div>
@@ -186,7 +155,7 @@
                   <input
                     type="number"
                     class="form-control"
-                    id="payment-amount"
+                    id="paymentAmount"
                     required
                   />
                 </div>
@@ -195,11 +164,11 @@
                   <input
                     type="date"
                     class="form-control"
-                    id="payment-date"
+                    id="paymentDate"
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100">
+                <button type="submit" class="btn text-white w-100" id="paymentBtn">
                   Add Payment
                 </button>
               </form>
@@ -228,13 +197,13 @@
         </div>
 
         <!-- Recurring Finances Section -->
-        <div class="col-12">
+        <!-- <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Recurring Finances</h5>
+              <h5 class="card-title">Recurring Finances</h5> -->
 
               <!-- Recurring Income -->
-              <h6>Recurring Income</h6>
+              <!-- <h6>Recurring Income</h6>
               <form id="recurring-income-form" class="mb-3">
                 <div class="row g-3">
                   <div class="col-md-4">
@@ -272,10 +241,10 @@
                     </button>
                   </div>
                 </div>
-              </form>
+              </form> -->
 
               <!-- Recurring Expenses -->
-              <h6>Recurring Expenses</h6>
+              <!-- <h6>Recurring Expenses</h6>
               <form id="recurring-expenses-form">
                 <div class="row g-3">
                   <div class="col-md-4">
@@ -313,10 +282,10 @@
                     </button>
                   </div>
                 </div>
-              </form>
+              </form> -->
 
               <!-- Recurring Transactions Table -->
-              <h6 class="mt-4">Recurring Transactions Summary</h6>
+              <!-- <h6 class="mt-4">Recurring Transactions Summary</h6>
               <table class="table table-bordered">
                 <thead>
                   <tr>
@@ -327,10 +296,11 @@
                   </tr>
                 </thead>
                 <tbody id="recurring-transactions-summary"></tbody>
-              </table>
-            </div>
+              </table> -->
+            <!-- </div>
           </div>
-        </div>
+        </div> -->
+        
       </div>
     </div>
   </body>
