simple error fixes with the setup of form

--- a/Login/index.html
+++ b/Login/index.html
@@ -38,6 +38,7 @@
             class="form-control"
             id="email"
             placeholder="name@example.com"
+            autocomplete="email"
             required
           />
           <label for="email">Email address</label>
@@ -49,6 +50,7 @@
             id="password"
             placeholder="Password"
             required
+            autocomplete="current-password"
           />
           <label for="password">Password</label>
           <button
