--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -59,7 +59,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Networth</h5>
-              <p class="card-text" id="networth">Total Networth: $0.00</p>
+              <p class="card-text" id="networth">Your total net worth will be displayed here.</p>
             </div>
           </div>
         </div>
@@ -70,9 +70,7 @@
             <div class="card-body">
               <h5 class="card-title">Recent Expenses</h5>
               <ul class="list-unstyled" id="expenses">
-                <li>Groceries: $200</li>
-                <li>Rent: $1200</li>
-                <li>Utilities: $150</li>
+                <li>Your recent expenses will appear here.</li>
               </ul>
             </div>
           </div>
@@ -83,7 +81,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Debts</h5>
-              <p class="card-text" id="debts">Total Debts: $2,000</p>
+              <p class="card-text" id="debts">Your total debts will be displayed here.</p>
             </div>
           </div>
         </div>
@@ -94,8 +92,7 @@
             <div class="card-body">
               <h5 class="card-title">Payments Due Soon</h5>
               <ul class="list-unstyled" id="payments">
-                <li>Credit Card Bill - Due in 5 days</li>
-                <li>Loan Payment - Due in 10 days</li>
+                <li>Past, present, and upcoming payments will appear here.</li>
               </ul>
             </div>
           </div>
