--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -177,7 +177,7 @@
         </div>
 
         <!-- Transactions Table -->
-        <div class="col-12">
+        <!-- <div class="col-12">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Transaction History</h5>
@@ -194,7 +194,7 @@
               </table>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Recurring Finances Section -->
         <!-- <div class="col-12">
