--- a/Signup/index.html
+++ b/Signup/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpendSense | Sign up</title>
 
-    <link rel="icon" type="image/png" href="../../img/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="../../img/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="../img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="SpendSense" />
-    <link rel="manifest" href="../../img/favicon/site.webmanifest" />
+    <link rel="manifest" href="../img/favicon/site.webmanifest" />
     
     <link href="./styles.css" rel="stylesheet" />
     <link
@@ -28,7 +28,8 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
-  <body class="d-flex align-items-center py-4">
+  <body class="d-flex flex-column justify-content-center align-items-center">
+    <h1 class="text-center">SpendSense</h1>
     <main class="form-signin w-100 m-auto">
       <form>
         <h1 class="h3 mb-3 fw-normal text-center">Sign up</h1>
@@ -79,7 +80,7 @@
         </div>
         <button class="btn text-white w-100 py-2" id="signupBtn" type="submit">Sign Up</button>
       </form>
-      <button class="btn text-white w-100 mt-2" id="loginBtn">Login</button>
+      <button class="btn text-white w-100 mt-2" id="loginBtn">Go back to Login</button>
     </main>
   </body>
 </html>
