added a transaction history table

--- a/SpendSense/Transactions/index.html
+++ b/SpendSense/Transactions/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpendSense | Transactions</title>
 
-    <link rel="icon" type="image/png" href="../../img/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../img/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../../img/favicon/favicon.svg"
+    />
     <link rel="shortcut icon" href="../../img/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../img/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="SpendSense" />
     <link rel="manifest" href="../../img/favicon/site.webmanifest" />
-    
+
     <link href="./styles.css" rel="stylesheet" />
     <link href="../Sidebar/styles.css" rel="stylesheet" />
     <link
@@ -63,7 +76,11 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100" id="incomeBtn">
+                <button
+                  type="submit"
+                  class="btn text-white w-100"
+                  id="incomeBtn"
+                >
                   Add Income
                 </button>
               </form>
@@ -95,7 +112,11 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100" id="expenseBtn">
+                <button
+                  type="submit"
+                  class="btn text-white w-100"
+                  id="expenseBtn"
+                >
                   Add Expense
                 </button>
               </form>
@@ -168,7 +189,11 @@
                     required
                   />
                 </div>
-                <button type="submit" class="btn text-white w-100" id="paymentBtn">
+                <button
+                  type="submit"
+                  class="btn text-white w-100"
+                  id="paymentBtn"
+                >
                   Add Payment
                 </button>
               </form>
@@ -177,24 +202,27 @@
         </div>
 
         <!-- Transactions Table -->
-        <!-- <div class="col-12">
+        <div class="col-12">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Transaction History</h5>
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th>Date</th>
-                    <th>Type</th>
-                    <th>Category/Source</th>
-                    <th>Amount</th>
-                  </tr>
-                </thead>
-                <tbody id="transaction-history"></tbody>
-              </table>
+              <div class="table-responsive transaction-history">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Type</th>
+                      <th>Category/Source</th>
+                      <th>Amount</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody id="transaction-history"></tbody>
+                </table>
+              </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <!-- Recurring Finances Section -->
         <!-- <div class="col-12">
@@ -202,8 +230,8 @@
             <div class="card-body">
               <h5 class="card-title">Recurring Finances</h5> -->
 
-              <!-- Recurring Income -->
-              <!-- <h6>Recurring Income</h6>
+        <!-- Recurring Income -->
+        <!-- <h6>Recurring Income</h6>
               <form id="recurring-income-form" class="mb-3">
                 <div class="row g-3">
                   <div class="col-md-4">
@@ -243,8 +271,8 @@
                 </div>
               </form> -->
 
-              <!-- Recurring Expenses -->
-              <!-- <h6>Recurring Expenses</h6>
+        <!-- Recurring Expenses -->
+        <!-- <h6>Recurring Expenses</h6>
               <form id="recurring-expenses-form">
                 <div class="row g-3">
                   <div class="col-md-4">
@@ -284,8 +312,8 @@
                 </div>
               </form> -->
 
-              <!-- Recurring Transactions Table -->
-              <!-- <h6 class="mt-4">Recurring Transactions Summary</h6>
+        <!-- Recurring Transactions Table -->
+        <!-- <h6 class="mt-4">Recurring Transactions Summary</h6>
               <table class="table table-bordered">
                 <thead>
                   <tr>
@@ -297,10 +325,9 @@
                 </thead>
                 <tbody id="recurring-transactions-summary"></tbody>
               </table> -->
-            <!-- </div>
+        <!-- </div>
           </div>
         </div> -->
-        
       </div>
     </div>
   </body>
