added $ to the name

--- a/Signup/index.html
+++ b/Signup/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body class="d-flex flex-column justify-content-center align-items-center">
-    <h1 class="text-center">SpendSense</h1>
+    <h1 class="text-center">$pend$ense</h1>
     <main class="form-signin w-100 m-auto">
       <form>
         <h1 class="h3 mb-3 fw-normal text-center">Sign up</h1>
