--- a/SpendSense/Sidebar/index.html
+++ b/SpendSense/Sidebar/index.html
@@ -15,7 +15,7 @@
           width="50"
           height="50"
         />
-        <p class="fs-4 title">SpendSense</p>
+        <p class="fs-4 title">$pend$ense</p>
       </div>
 
       <hr />
