--- a/SpendSense/Dashboard/index.html
+++ b/SpendSense/Dashboard/index.html
@@ -57,7 +57,7 @@
         <!-- Networth Card -->
         <div class="col">
           <div class="card shadow-sm">
-            <h5 class="card-title">Networth</h5>
+            <h5 class="card-title">Balance</h5>
             <div class="card-body">
               <p class="card-text" id="networth">Your total net worth will be displayed here.</p>
             </div>
